# umx 1.6.0
* April 01 2017 R 3.3.3
* IMPROVED: umx_make_TwinData better docs, use variance input, more features, seed, varName, flexible use
* IMPROVED: umxAPA now reports mode for factor data
* CHANGED: umx_make_TwinData uses variance (not path coef)

# umx 1.5.5
* March 20 2017 R 3.3.3
* NEW: umx_write_to_clipboard
* NEW: umx_r_test
* IMPROVED: Add autoRun option to umxModify.
* FIXED: Switch away from CSOLNP in umxCP example.
* ROLLBACK: No longer generically alter CSOLNP tolerance.

# umx 1.5.1
* March 05 2017 R 3.3.2
* IMPROVED: umxCP example for improved compatibility with OpenMx 2.7
* IMPROVED: umx twin models now set a better (less likely to fail) precision for CSOLNP
* IMPROVED: improved help files; document forms parameter for umxPath
* IMPROVED: handling list inputs
* IMPROVED: behavior of confint()
* IMPROVED: formatting of umxAPA table output
* ADD: "check" option to umx_make()
* FIXED: umxpath(a, forms= ) arrows = 2 bug

# umx 1.5.0
* December 2016 feature + OpenMx 1.7.3 compatibility release
* IMPROVED: umxRAM returns invisibly
* IMPROVED: umx_aggregate can return a formatted table (kable = TRUE)
* IMPROVED: umxAPA returns lower-triangle of data.frame correlations (by default)
* REMOVED: umxSE now included in OpenMx 2.7.0!
* FIXED: umx_set_plot_format uses silent = TRUE internally where needed

# umx 1.4.9
* December 2016 bug fix
* FIXED: umx_make_TwinData fix bug in DZ moderator code and A+C computation
* IMPROVED: more functionality hints in man page titles

# umx 1.4.5
* November 2016 "Usability is queen/Sincere Pumpkin Patch"
* IMPROVED: Reorganize function families to increase clarity
* IMPROVED: umx_set functions now show legal options by default
* NEW: umx_set functions have silent option
* FIX secure http URLs

# umx 1.4.0
* Mid October 2016 "New features and improvements"
* BUG FIX: umxFitIndices RMR and SRMR (h/t Brenton Wiernik!)
* NEW: umxMatrix with default labels and name as 1st parameter 
* NEW: Definition variable umxPath type, e.g.